--- a/documentation/modules/security/con-securing-kafka-authentication.adoc
+++ b/documentation/modules/security/con-securing-kafka-authentication.adoc
@@ -23,11 +23,10 @@ Supported authentication options:
 
 . mTLS authentication (only on the listeners with TLS enabled encryption)
 . SCRAM-SHA-512 authentication
-. xref:assembly-oauth-authentication_str[OAuth 2.0 token-based authentication]
 . link:{BookURLConfiguring}#type-KafkaListenerAuthenticationCustom-reference[Custom authentication^]
 . link:{BookURLConfiguring}#con-common-configuration-ssl-reference[TLS versions and cipher suites^]
 
-If you're using OAuth 2.0 for client access management, user authentication and authorization credentials are handled through the authorization server.
+Use custom authentication to configure token-based client access management, so that user authentication and authorization credentials are handled through an authorization server.
 
 The authentication option you choose depends on how you wish to authenticate client access to Kafka brokers.
 
