--- a/documentation/assemblies/oauth/assembly-oauth-security.adoc
+++ b/documentation/assemblies/oauth/assembly-oauth-security.adoc
@@ -13,6 +13,10 @@ Scopes correspond to different levels of access to Kafka topics or operations wi
 
 OAuth 2.0 also supports single sign-on and integration with identity providers. 
 
+NOTE: The authentication types `oauth` and `keycloak` are deprecated and will be removed in a future release. 
+Use the `custom` authentication type to configure token-based security on listeners and components.
+This content is currently being updated to reflect the transition to the `custom` authentication type.
+
 ifdef::Section[]
 For more information on using OAuth 2.0, see the link:https://github.com/strimzi/strimzi-kafka-oauth[Strimzi OAuth 2.0 for Apache Kafka project^].
 endif::Section[]
